--- a/PAGINE/Homecoming.html
+++ b/PAGINE/Homecoming.html
@@ -13,7 +13,7 @@
     <h1>Homecoming</h1>
     <h2>di Kanye West</h2>
     <img src="../MEDIA/download (1).jpg" alt="Homecoming">
-    <h3>
+    <h3><pre>
         I'm coming home again
 Do you think about me now and then?
 Do you think about me now and then?
@@ -70,7 +70,7 @@ Fireworks at Lake Michigan
 Oh, now I'm coming home again
 Maybe we can start again
 
-    </h3>
+    </pre> </h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/LQ488QrqGE4?si=4p0qfLhEY0ocqvQc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
