--- a/PAGINE/LifeOfTheParty.html
+++ b/PAGINE/LifeOfTheParty.html
@@ -13,7 +13,7 @@
     <h1>Life of the Party</h1>
     <h2>di Kanye West</h2>
     <img src="../MEDIA/download.png" alt="life of the party">
-    <h3>
+    <h3><pre>
         It's after hours at that glamorous blind spot
 Where they're taking it easy, swapping personal experiences
 Let's listen in America Today
@@ -128,7 +128,7 @@ Daddy got you, daddy gon' bring us all the way down, okay?
 (How was it?) We good
 (You did a good job) it was scary
 (Good job) our daughter got more heart than you
-    </h3> <iframe width="560" height="315" src="https://www.youtube.com/embed/401hZy6Hipw?si=kO5RO6O78TMPlM1E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </pre></h3> <iframe width="560" height="315" src="https://www.youtube.com/embed/401hZy6Hipw?si=kO5RO6O78TMPlM1E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
 </html>
