--- a/PAGINE/NoMorePartyInLA.html
+++ b/PAGINE/NoMorePartyInLA.html
@@ -13,7 +13,7 @@
     <h1>No more Party in LA</h1>
     <h2>di Kanye West</h2>
     <img src="../MEDIA/download (3).jpg" alt="NomorepartyinLa">
-    <h3>
+    <h3><pre>
         La di da da-a, da-a (I like this flavor)
 La da da da di da da-a, la-a
 Let me tell you, I'm out here
@@ -155,7 +155,7 @@ All for a chance to be a star
 Nowhere seems to be too far
 SWISH
 
-    </h3>
+    </pre></h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/NnMuFqsmYSE?si=pR61LbkE8UbeZj5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
