--- a/PAGINE/TouchTheSky.html
+++ b/PAGINE/TouchTheSky.html
@@ -12,8 +12,8 @@
      </a>
     <h1>Touch the sky</h1>
     <h2>di Kanye West</h2>
-    <img src="../MEDIA/download (3).jpg" alt="Touch the sky">
-    <h3>
+    <img src="../MEDIA/download3.jpg" alt="Touch the sky">
+    <h3><pre>
         I gotta testify
 Come up in the spot looking extra fly
 'Fore the day I die, I'ma touch the sky
@@ -108,7 +108,7 @@ Yeah
 Uh, feels good to be home, baby
 Feels good to be home
 
-    </h3>
+    </pre> </h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YkwQbuAGLj4?si=vaXoIYDYDtOkir2b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
