--- a/kanyewest.html
+++ b/kanyewest.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/mioStile.css">
+    <link rel="stylesheet" href="CSS/mioStyle.css">
 </head>
+
 <body>
     <h1>Kanye West</h1>
-    <img src="MEDIA/kanye.jpg" alt="" id="K">
-    <li><a href="PAGINE/NoMorePartyInLA.html">No more party in LA</a></li>
-    <li><a href="/PAGINE/Runaway.html">Runaway</a></li>
-    <li><a href="/PAGINE/LifeOfTheParty.html">Life of the Party</a></li>
-    <li><a href="/PAGINE/TouchTheSky.html">Touch the Sky</a></li>
-    <li><a href="/PAGINE/Homecoming.html">Homecoming</a></li>
+    <img src="MEDIA/kanye.jpg" alt="" id="k">
+    <table border="1">
+        <tr>
+            <th>Numero</th>
+            <th>Nome</th>
+        </tr>
+        <tr>
+            <th>1</td>
+            <th><a href="PAGINE/NoMorePartyInLA.html">No more party in LA</a></td>
+        </tr>
+        <tr>
+            <th>2</th>
+            <th><a href="PAGINE/Runaway.html">Runaway</a></th>
+        </tr>
+        <tr>
+            <th>3</th>
+            <th><a href="PAGINE/LifeOfTheParty.html">Life of the Party</a></th>
+        </tr>
+        <tr>
+            <th>4</th>
+            <th><a href="PAGINE/TouchTheSky.html">Touch the Sky</a></th>
+        </tr>
+        <tr>
+            <th>5</th>
+            <th><a href="PAGINE/Homecoming.html">Homecoming</a></th>
+        </tr>
+    </table>
+
+
+    <ol>t
+        <li><a href="PAGINE/NoMorePartyInLA.html">No more party in LA</a></li>
+        <li><a href="PAGINE/Runaway.html">Runaway</a></li>
+        <li><a href="PAGINE/LifeOfTheParty.html">Life of the Party</a></li>
+        <li><a href="PAGINE/TouchTheSky.html">Touch the Sky</a></li>
+        <li><a href="PAGINE/Homecoming.html">Homecoming</a></li>
+        <ol>
 </body>
+
 </html>
